syntax = "proto2";
package easy_rec.protos;


message DNN {
    // hidden units for each layer
    repeated uint32 hidden_units = 1;
    // ratio of dropout
    repeated float dropout_ratio = 2;
    // activation function
    optional string activation = 3 [default = 'tf.nn.relu'];
    // use batch normalization
    optional bool use_bn = 4 [default = true];
}
